# ai-inventor-old3

./: .env.template  .gitignore  CLAUDE.md  README.md
aii_lib/: pyproject.toml
aii_lib/src/aii_lib/: __init__.py  config.py  kit.py  types.py
aii_lib/src/aii_lib/abilities/: __init__.py
aii_lib/src/aii_lib/abilities/ability_server/: __init__.py  ability_client.py  ability_service.py  endpoints.py  server_config.yaml  tooluniverse_mcp.py
aii_lib/src/aii_lib/abilities/mcp_server/: __init__.py  config.py  server.py  server_config.yaml  start_aii_tooluniverse.sh  start_full_tooluniverse.sh
aii_lib/src/aii_lib/abilities/skills/: IN_PROJECT_ROOT.md  __init__.py
aii_lib/src/aii_lib/abilities/tools/: README.md  __init__.py  aii.mcp.json  aii_web_tools.py  base.py  dblp_tools.py  lean_tools.py  openrouter_llms_tools.py  run_tooluniverse.py  start_mcp_server.py  tools_to_load.txt
aii_lib/src/aii_lib/agent_backend/: __init__.py  __main__.py
aii_lib/src/aii_lib/agent_backend/claude/: __init__.py  agent.py  config.py
aii_lib/src/aii_lib/agent_backend/utils/: __init__.py  finalizer.py  initializer.py
aii_lib/src/aii_lib/agents/: __init__.py
aii_lib/src/aii_lib/agents/claude/: __init__.py  config.yaml
aii_lib/src/aii_lib/llm_backend/: __init__.py  config.py  default_config.yaml  supported_models.py  tool_loop.py
aii_lib/src/aii_lib/llm_backend/anthropic/: __init__.py  ant_to_json.py  client.py  json_to_log_format.py  pricing.py
aii_lib/src/aii_lib/llm_backend/gemini/: __init__.py  client.py  gem_to_json.py  json_to_log_format.py  pricing.py
aii_lib/src/aii_lib/llm_backend/openai/: __init__.py  client.py  json_to_log_format.py  oai_to_json.py  pricing.py
aii_lib/src/aii_lib/llm_backend/openrouter/: __init__.py  client.py  json_to_log_format.py  or_to_json.py
aii_lib/src/aii_lib/pools/: __init__.py  base_pool.py
aii_lib/src/aii_lib/prompts/: __init__.py  prompt_format.py  prompt_serializable.py  structured_output.py
aii_lib/src/aii_lib/telemetry/: __init__.py  message.py  telemetry.py
aii_lib/src/aii_lib/telemetry/sinks/: __init__.py  base.py  console.py  json.py
aii_lib/src/aii_lib/telemetry/utils/: __init__.py  json_formatter.py
aii_lib/src/aii_lib/utils/: __init__.py  cache_cleanup.py  model_utils.py  start_ability_server.sh  start_servers.py
aii_lib/src/aii_lib/utils/agent_to_llm/: __init__.py  claude_agent_to_llm.py
aii_lib/src/aii_lib/workflows/: __init__.py  research_workflow.py
aii_lib/src/aii_lib/workflows/cited_args/: __init__.py  citation.py  fetching.py  matching.py  workflow.py
aii_lib/src/aii_lib/workflows/gen_kg/: __init__.py  verify.py  workflow.py
aii_lib/src/aii_lib/workflows/llm_ranker/: __init__.py  k_random_ranker.py  ranking_diagnostics.py  swiss_bt_ranker.py
aii_pipeline/: config.yaml  pyproject.toml
aii_pipeline/src/aii_pipeline/: __init__.py  __main__.py  cli.py  pipeline.py
aii_pipeline/src/aii_pipeline/prompts/components/: __init__.py  aii_context.py  artifact_planning.py  artifact_scope.py  artifact_summaries.py  data_files.py  read_skills.py  research_practices.py  (+5 more)
aii_pipeline/src/aii_pipeline/steps/: _1_seed_hypo.py  _2_gen_hypo.py  _3_1_gen_strat.py  _3_2_gen_plan.py  _3_3_gen_art.py  _3_4_gen_narr.py  _3_invention_loop.py  _4_gen_paper_repo.py  __init__.py
aii_pipeline/src/aii_pipeline/utils/: __init__.py  format_helpers.py  module_output.py  pipeline_config.py
(+236 files in other folders)
