[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aii_lib"
version = "0.1.0"
description = "GenAI toolkit for ai-inventor pipeline"
readme = "README.md"
requires-python = ">=3.10,<3.12"
license = {text = "MIT"}
authors = [
    {name = "Adrian", email = "adrian@example.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "loguru>=0.7.0",
    "tenacity>=8.0.0",
    "openai>=1.99.0",
    "anthropic>=0.62.0",
    "httpx>=0.28.0",
    "pyyaml>=6.0",
    "tooluniverse>=0.1.0",
    "claude-agent-sdk @ git+https://github.com/anthropics/claude-agent-sdk-python.git@main",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.yaml", "*.json", "*.md"]
